# lmfa0

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  lmfa0.toml  package.json  standard-version-updater.js
.circleci/: config.yml
docs/: config.toml
docs/content/: index.md
docs/static/: style.css
docs/templates/: index.html
src/: azure_table.rs  config.rs  diff.rs  foobar.rs  main.rs
