[package]
name = "lmfa0"
version = "0.1.0"
authors = ["Bryce Fisher-Fleig <brycefisher@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { version = "0.12.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 'z'
